--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ pre code {
 
 /* CUSTOM */
 a {
-    background-color: #4565A7;
+    color: #4565A7;
 }
 .nav-pills > li.active > a, 
 .nav-pills > li.active > a:hover, 
