Change image max-width

--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ li {
 }
 
 #content img {
-    max-width: 100%;
+    max-width: 800px;
     padding: 5px;
     background-color: #fff;
     display: block;
