--- a/default.twig
+++ b/default.twig
@@ -61,7 +61,7 @@
         <footer>
             <div class="{{ menu ? 'container-fluid' : 'container' }}">
                 <p class="text-muted">
-                    website generated with <a href="http://couscous.io" title="Markdown website generator">Couscous</a>
+                    © <a href="http://xarx.co" title="Copyright XARX">XARX</a>
                 </p>
             </div>
         </footer>
