Add image zoom plugin

--- a/default.twig
+++ b/default.twig
@@ -7,6 +7,7 @@
         <title>{{ title }}</title>
         <link rel="icon" href="{{ baseUrl }}/favicon.png" />
         <link rel="stylesheet" href="{{ baseUrl }}/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/fat/zoom.js/master/css/zoom.css">
         <link rel="stylesheet" href="{{ baseUrl }}/css/font-awesome.min.css">
         <link rel="stylesheet" href="{{ baseUrl }}/css/highlight.dark.css">
         <link rel="stylesheet" href="{{ baseUrl }}/css/main.css">
@@ -69,11 +70,14 @@
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
         <script src="//yastatic.net/highlightjs/8.2/highlight.min.js"></script>
+        <script src="https://raw.githubusercontent.com/fat/zoom.js/master/dist/zoom.min.js"></script>
 
         <script>
             $(function() {
+                $("img").each(function(){
+                    $(this).data("action", "zoom");
+                });
                 $("section>h1").wrap('<div class="page-header" />');
-                // Syntax highlighting
                 hljs.initHighlightingOnLoad();
             });
         </script>
