--- a/default.twig
+++ b/default.twig
@@ -7,9 +7,9 @@
         <title>{{ title }}</title>
         <link rel="icon" href="{{ baseUrl }}/favicon.png" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ baseUrl }}/css/zoom.css">
-        <link rel="stylesheet" href="{{ baseUrl }}/css/font-awesome.min.css">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/default.min.css">
+        <link rel="stylesheet" href="{{ baseUrl }}/css/font-awesome.css">
+        <link rel="stylesheet" href="{{ baseUrl }}/css/zoom.css">
         <link rel="stylesheet" href="{{ baseUrl }}/css/main.css">
     </head>
     <body>
@@ -68,9 +68,9 @@
         </footer>
 
         <script src="//code.jquery.com/jquery-2.2.2.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="//cdn.jsdelivr.net/highlight.js/9.2.0/styles/default.min.css">
-<script src="//cdn.jsdelivr.net/highlight.js/9.2.0/highlight.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/highlight.min.js"></script>
+        <script src="//cdn.jsdelivr.net/highlight.js/9.2.0/highlight.min.js"></script>
         <script src="{{ baseUrl }}/js/zoom.js"></script>
 
         <script>
